--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="introduccion">
 		<h1>Título: Ayudantía 6</h1>
 		<img src="img/imagen01.jpg">
-		<p>Párrafo para describir a mi gato</p>
+		<p>Los gatitos son súper tiernos</p>
 	</div>
 
 
@@ -31,7 +31,7 @@
 
 	<div id="contenedor">
         
-		<h2>A Sub titulo para este proyecto</h2>
+		<h2>Los conejos también son súper cute</h2>
 				<img src="img/imagen02.jpg">
 		<p>-Otro párrafo cortito...</p>
 			
