--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 	<div id="introduccion">
-		<h1>Título: Ayudantía 6</h1>
+		<h1>Portafolio de animalitos cute</h1>
 		<img src="img/imagen01.jpg">
 		<p>Los gatitos son súper tiernos</p>
 	</div>
@@ -38,7 +38,7 @@
 		<h3>B Sub titulo otro contenido</h3>
 		<p>Un párrafo final tipo conclusión</p>
 
-		<h2>C Sub titulo vis 1</h2>
+		<h2>Aquí hay una tablita de muchos colores</h2>
 		<img src="img/vis01.jpg">
 		<p>Un párrafo explicativo</p>
 
