cambié el título, cambié la descripción del gato y el subtítulo arriba del conejito

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="introduccion">
 		<h1>Portafolio de animalitos cute</h1>
 		<img src="img/imagen01.jpg">
-		<p>Los gatitos son súper tiernos</p>
+		<p>Los gatitos son súper cute</p>
 	</div>
 
 
